--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,9 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: update Jacoco Site
+      uses: actions/upload-artifact@v4
+      with: 
+        name: jacoco-report
+        path: ${{ github.workspace }}/target/site/jacoco
 
