--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
     - name: Build with maven
       run: mvn clean verify sonar:sonar -Dsonar.token=788135fd4697361a132257ec1242f8a7d1bc95f6 -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=lazman8 -Dsonar.projectKey=LazMan8_JavaGitActions
       env:
-        SONNAR_TOKEN: ${{ secret.SONNAR_TOKEN }}
+        SONNAR_TOKEN: ${{ secrets.SONNAR_TOKEN }}
 
       
 
