--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,8 +57,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with maven
-      run: mvn clean verify sonar:sonar -Dsonar.token=$SONAR_TOKEN -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=lazman8 -Dsonar.projectKey=LazMan8_JavaGitActions
-      env:
+      run: mvn clean verify sonar:sonar -Dsonar.token=$SONAR_TOKEN 
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       
