--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,4 +56,4 @@ jobs:
         cache: maven
     - name: Build with maven
       run: mvn clean verify sonar:sonar -Dsonar.token=$SONAR_TOKEN 
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}.
