--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,5 @@
+
+
 name: Java CI with Maven
 
 on:
@@ -36,7 +38,7 @@ jobs:
         echo "branch coverage = ${{steps.jacoco.outputs.branches}}"
     - name: Commit the badge (if it changed)
       run: |
-        if {{ git status --porcelain }}; then
+        if {{ `git status --porcelain` }}; then
           git config --global user.name 'LazMan8'
           git config --global user.email 'laza.andriamampianina67@outlook.com'
           git add *.svg
@@ -45,7 +47,6 @@ jobs:
         fi
   code_quality:
     runs-on: ubuntu-latest
-    needs: tests
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 21
@@ -55,5 +56,9 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with maven
-      run: mvn clean verify sonar:sonar -Dsonar.token=$SONAR_TOKEN 
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}.
+      run: mvn clean verify sonar:sonar -Dsonar.token=$SONNAR_TOKEN
+      env:
+        SONNAR_TOKEN: ${{ secret.SONNAR_TOKEN }}
+
+      
+
