--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,9 +56,9 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with maven
-      run: mvn clean verify sonar:sonar -Dsonar.token=$SONNAR_TOKEN
+      run: mvn clean verify sonar:sonar -Dsonar.token=$SONAR_TOKEN
       env:
-        SONNAR_TOKEN: ${{ secret.SONNAR_TOKEN }}
+        SONNAR_TOKEN: ${{ secret.SONAR_TOKEN }}
 
       
 
