--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
     - name: Build with maven
       run: mvn clean verify sonar:sonar -Dsonar.token=$SONAR_TOKEN
       env:
-        SONNAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       
 
