--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,3 @@
-
-
 name: Java CI with Maven
 
 on:
@@ -48,7 +46,6 @@ jobs:
         fi
   code_quality:
     runs-on: ubuntu-latest
-    needs: code-quality
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 21
@@ -61,7 +58,7 @@ jobs:
       run: mvn clean verify sonar:sonar -Dsonar.token=$SONAR_TOKEN -Dsonar.qualitygate.wait=true
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  docker-deploy:
+   docker-deploy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -78,13 +75,10 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ vars.DOCKERHUB_USERNAME }}
+        username: ${{ vers.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build and push
       uses: docker/build-push-action@v6
       with:
         context: .
         tags: lazman8/app-maven
-
-      
-
